--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <script src="js/modernizr.js"></script>
   </head>
   <body>
+      <nav class="top-bar" data-topbar>
+        <ul class="title-area">
+          <li class="name">
+            <h1><a href="#">Jordan Kidd</a></h1>
+          </li>
+          <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+        </ul>
+
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About me</a></li>
+          <li><a href="#">Get in touch</a></li>
+        </ul>
+      </section>
+    </nav>
     <script src="js/jquery.min.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/app.js"></script>
