add header and images

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
         </ul>
       </section>
     </nav>
+
+    <header>
+      <div class="row">
+        <div class="small-11 columns">
+          <h1>Intelligent, beautiful design</h1>
+          <h4>This is some random filler text I don't care about</h4>
+          <a href="#" class="button brand-red radius">Get in touch</a>
+        </div>
+      </div>
+    </header>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/app.js"></script>
