--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <header>
       <div class="row">
         <div class="small-11 columns">
-          <h1>Intelligent, beautiful design</h1>
-          <h4>This is some random filler text I don't care about</h4>
+          <h1>Web stuff and other things</h1>
+          <h4>Am I right or am I right? Or am I right? Am I right?</h4>
           <a href="#" class="button brand-red radius">Get in touch</a>
         </div>
       </div>
