--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="theme-color" content="#1C292D">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jordan Kidd</title>
     <link rel="stylesheet" href="css/app.css" />
