--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jordan Kidd</title>
     <meta name="theme-color" content="#1C292D">
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="icon" sizes="192x192" href="img/icon.png">
     <script src="js/modernizr.js"></script>
   </head>
   <body>
